--- a/css/fancydevbuild.css
+++ b/css/fancydevbuild.css
@@ -1,2 +1,2 @@
-
+#devbuild-trigger .icon{background-image:url(../images/icon.png);background-size:16px 16px}#devbuild-trigger.loading .icon{background-image:url(../images/loading.gif)}
 /*# sourceMappingURL=fancydevbuild.css.map */
