Update to logic and display. Closes #1 and #2

--- a/scss/fancydevbuild.scss
+++ b/scss/fancydevbuild.scss
@@ -13,4 +13,12 @@
         background-image: url(../images/loading.gif);
     }
 
+    &.error .icon {
+        background-image: url(../images/error.png);
+    }
+
+    &.error .text {
+        color: #EF4836;
+    }
+
 }
