--- a/scss/fancydevbuild.scss
+++ b/scss/fancydevbuild.scss
@@ -1,24 +1,115 @@
 /**
- * Default styles for the fancy dev build button.
- * This contains both variables and layout for both cms/frontend.
- */
-#devbuild-trigger {
+* Default styles for the fancy dev build button.
+* This contains both variables and layout for both cms/frontend.
+*/
 
-    .icon {
-        background-image: url(../images/icon.png);
-        background-size: 16px 16px;
+// colors
+$standard-color: #303538;// #303538
+$loading-color: #303538;
+$error-color: #dd0000;
+$success-color: #208c20;
+
+.devbuild-trigger{
+    color: $standard-color;
+    &.loading{
+        color: $loading-color;
     }
-
-    &.loading .icon {
-        background-image: url(../images/loading.gif);
+    &.error{
+        color: $error-color;
     }
-
-    &.error .icon {
-        background-image: url(../images/error.png);
+    &.success{
+        color: $success-color;
     }
+}
 
-    &.error .text {
-        color: #EF4836;
+// default state
+.devbuild-trigger{
+    overflow: hidden;
+    .icon.icon-16{
+        background: none;
+        border: 3px solid;
+        border-radius: 50%;
+        transform: scale(0.7);
+        margin-left: 0;
+        margin-top: -11px;
+        transition: all 0.5s ease;
+        &:after{
+            content: "";
+            border-radius: 50%;
+            position: absolute;
+            top: -3px;
+            right: -3px;
+            bottom: -3px;
+            left: -3px;
+        }
     }
+}
 
+// success state
+.devbuild-trigger{
+    &.success .icon{
+        &:after{
+            opacity: 0;
+            border: 1px solid;
+            animation: pulse 1s linear infinite;
+        }
+    }
+}
+
+// error state
+.devbuild-trigger{
+    &.error .icon{
+        &:after{
+            opacity: 0;
+            border: 1px solid;
+            animation: pulse 1s linear infinite;
+        }
+    }
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 0;
+    }
+    8% {
+        transform: scale(1);
+        opacity: 0.3;
+    }
+    15% {
+        transform: scale(1.1);
+        opacity: 1;
+    }
+    30% {
+        transform: scale(1.2);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1.5);
+        opacity: 0;
+    }
+}
+
+// loading state
+.devbuild-trigger{
+    &.loading .icon{
+        color: $loading-color;
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        animation: loader 1.4s infinite linear;
+        &:after{
+            opacity: 0.5;
+            border: 3px solid;
+        }
+    }
+}
+
+@keyframes loader {
+    0% {
+        transform: rotate(0deg) scale(0.7);
+    }
+    100% {
+        transform: rotate(360deg) scale(0.7);
+    }
 }
